    hover over the item.
  Added Plasma item.
  Added a new debug feature to ADDSynthCore that allows you to print all defined
    block and item tags into text files.
  Added stats for Converting Gems, Firing Lasers, and Identifying Items.
  Added 4 commands to ADDSynthCore. They don't do anything important, they're just
    there to try out and play with.
  Added a config option to ADDSynthCore that swaps the controls used to Add or Delete
    notes to/from the Music Box.
  Added Swap Track buttons to the Music Box gui.
  If you mouse over a Music Sheet item it now says if it's blank or it contains Music Data.
  Added advancements for the Celestial Gem, Magic Infuser, Advanced Ore Refinery,
    Crystal Matter Generator, Energy Suspension Bridge, Plasma, Rose Quartz,
    the standard Generator, Compressor, and the Circuit Fabricator.
CHANGED:
  All materials are now part of the ADDSynth Materials mod.
  The Music Box gui no longer has the JEI item panel. It doesn't need it.
  The Creative Tab icon for ADDSynth Energy is now the new Generator.
  The Generator that was part of Overpowered has been renamed to Crystal Energy Extractor.
  Renamed Energy Crystal to Celestial Gem.
    - You now get Energy Crystals by smelting Celestial Gems in a Blast Furnace.
    - Renamed all Energy Tools to Celestial Tools.
  You now get Energy Crystal Shards by putting an Energy Crystal into the Compressor.
  Renamed mod to Overpowered Technology.
    - This will cause your configuration files to be reset.
  Moved Trophies to ADDSynthCore.
  You now get a Void Crystal from the portal instead of an Unknown Technology item.
   - A Void Crystal is required to craft the Inverter.
  Rebalanced Values:
    Chance to drop an unidentified armor was changed from 1/40 to 1/100.
    Chance a Weird Tree spawns in the Unknown Dimension was changed from 1/500 to 1/2000.
      - But this doesn't mean anything right now because the Unknown Dimension doesn't exist.