@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "V této dimenzi nejsou černé díry povoleny.",
-"gui.overpowered.black_hole.notify_players": "§5Událost singularita§r byla detekována na souřadnicích: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Událost singularita§r byla detekována na souřadnicích: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Objektiv",
 "gui.overpowered.energy_suspension_bridge.rotate": "Točit se",
 "gui.overpowered.bridge_message.checking": "Chyba",
