@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "Los agujeros negros no están permitidos en esta dimensión.",
-"gui.overpowered.black_hole.notify_players": "§5Evento de singularidad§r detectado en las coordenadas: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Evento de singularidad§r detectado en las coordenadas: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Lente",
 "gui.overpowered.energy_suspension_bridge.rotate": "Girar",
 "gui.overpowered.bridge_message.checking": "Error",
