@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "Bu boyutta Kara Deliklere izin verilmez.",
-"gui.overpowered.black_hole.notify_players": "§5tekillik olayı§r koordinatlarda tespit edildi: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5tekillik olayı§r koordinatlarda tespit edildi: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Lens",
 "gui.overpowered.energy_suspension_bridge.rotate": "Döndürme",
 "gui.overpowered.bridge_message.checking": "Hata",
