@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "У цьому вимірі не допускаються чорні отвори.",
-"gui.overpowered.black_hole.notify_players": "§5Подія сингулярності§r було виявлено за координатами: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Подія сингулярності§r було виявлено за координатами: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Об'єктив",
 "gui.overpowered.energy_suspension_bridge.rotate": "Обертати",
 "gui.overpowered.bridge_message.checking": "Помилка",
