@@ -42,7 +42,9 @@ NEW:
   Added stats for Converting Gems, Firing Lasers, and Identifying Items.
   Added 4 commands to ADDSynthCore. They don't do anything important, they're just
     there to try out and play with.
-  Added a config option to ADDSynthCore that swaps the controls used to Add or Delete
+    [This mod is provided as-is. Any computers that crash as a result of player's missuse
+     of these commands is entirely the fault of the player and not the mod developer.]
+  Added a config option to ADDSynthCore that swaps the mouse buttons used to Add or Delete
     notes to/from the Music Box.
   Added Swap Track buttons to the Music Box gui.
   If you mouse over a Music Sheet item it now says if it's blank or it contains Music Data.
@@ -85,6 +87,7 @@ FIXED:
   Fixed advancements logging errors for items that were removed or disabled, I think.
   Fixed not translating block and item subtitles in their tooltips.
   Fixed the Magic Infuser producing Enchanted Books incorrectly.
+  Fixed the message that appears when you set down a Black Hole was displaying the wrong coordinates.
 REMOVED:
   Removed the ability to move some items into other Creative Tabs.
   Removed the Unknown Technology item.
